Switch to carousel of cast members

--- a/movies-app/src/app/features/movies/components/cast-member/cast-member.component.html
+++ b/movies-app/src/app/features/movies/components/cast-member/cast-member.component.html
@@ -7,7 +7,7 @@
         loading="lazy" />
     } @else {
       <div class="no-image">
-        <i class="pi pi-user"></i>
+        <i class="pi pi-user" aria-hidden="true"></i>
       </div>
     }
   </div>
