--- a/movies-app/src/styles.scss
+++ b/movies-app/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
 
 /* Global Styles */
 :root {
@@ -16,6 +17,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: var(--font-family);
   background-color: var(--surface-ground);
   color: var(--text-color);
