--- a/movies-app/src/app/features/movies/components/movie-card/movie-card.component.scss
+++ b/movies-app/src/app/features/movies/components/movie-card/movie-card.component.scss
@@ -146,11 +146,27 @@
   position: relative;
   aspect-ratio: 2/3;
   overflow: hidden;
+  background: var(--surface-card);
 
-  img {
+  .movie-poster {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .no-image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--surface-hover);
+    color: var(--text-color-secondary);
+
+    .pi {
+      font-size: 3rem;
+      opacity: 0.5;
+    }
   }
 }
 
