--- a/movies-app/src/app/features/movies/components/movie-search/movie-search.component.scss
+++ b/movies-app/src/app/features/movies/components/movie-search/movie-search.component.scss
@@ -214,7 +214,8 @@
 }
 
 .search-section,
-.genres-section {
+.genres-section,
+.year-section {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
