Added no results and cleanup

--- a/movies-app/src/app/features/movies/components/movie-card/movie-card.component.html
+++ b/movies-app/src/app/features/movies/components/movie-card/movie-card.component.html
@@ -8,6 +8,7 @@
       </div>
     }
     <div class="rating">
+      <i class="pi pi-star-fill"></i>
       <span class="rating-value">{{ movie.rating | number:'1.1-1' }}</span>
     </div>
     <div class="actions">
