--- a/movies-app/src/app/features/movies/components/movie-list/movie-list.component.scss
+++ b/movies-app/src/app/features/movies/components/movie-list/movie-list.component.scss
@@ -9,6 +9,32 @@
     margin-top: 2rem;
   }
 
+  .no-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 4rem auto;
+    text-align: center;
+    color: var(--text-color);
+    
+    .pi {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      opacity: 0.7;
+    }
+
+    p {
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+
+      &.subtitle {
+        color: var(--text-color-secondary);
+        font-size: 1rem;
+      }
+    }
+  }
+
   .loading-spinner {
     display: flex;
     flex-direction: column;
