--- a/movies-app/src/app/features/movies/components/movie-search/movie-search.component.html
+++ b/movies-app/src/app/features/movies/components/movie-search/movie-search.component.html
@@ -23,6 +23,19 @@
       </span>
     </div>
 
+    <div class="sort-section">
+      <label>Sort By</label>
+      <p-dropdown
+        [options]="sortOptions"
+        [(ngModel)]="selectedSort"
+        [showClear]="true"
+        placeholder="Select sorting"
+        optionLabel="label"
+        optionValue="value"
+        [style]="{ width: '100%' }">
+      </p-dropdown>
+    </div>
+
     <div class="genres-section">
       <label>Genres</label>
       <p-multiSelect
